modify registry & directory